--- a/src/myfaces/javax/faces/Messages_de.properties
+++ b/src/myfaces/javax/faces/Messages_de.properties
@@ -21,10 +21,10 @@
 # standard messages (Spec. 2.5.1.4)
 
 javax.faces.component.UIInput.CONVERSION        = Konvertierungsfehler
-javax.faces.component.UIInput.CONVERSION_detail = Fehler beim Model-Update.
+javax.faces.component.UIInput.CONVERSION_detail = "{0}": Fehler beim Model-Update.
 
 javax.faces.component.UIInput.REQUIRED        = Validierungsfehler
-javax.faces.component.UIInput.REQUIRED_detail = Eingabe erforderlich.
+javax.faces.component.UIInput.REQUIRED_detail = "{0}": Eingabe erforderlich.
 
 javax.faces.component.UISelectOne.INVALID        = Validierungsfehler
 javax.faces.component.UISelectOne.INVALID_detail = Wert ist keine gültige Auswahl.
@@ -33,79 +33,79 @@ javax.faces.component.UISelectMany.INVALID        = Validierungsfehler
 javax.faces.component.UISelectMany.INVALID_detail = Wert ist keine gültige Auswahl.
 
 javax.faces.validator.NOT_IN_RANGE        = Validierungsfehler
-javax.faces.validator.NOT_IN_RANGE_detail = Eingegebener Wert liegt nicht im erwarteten Bereich von {0} bis {1}.
+javax.faces.validator.NOT_IN_RANGE_detail = "{2}": Eingegebener Wert liegt nicht im erwarteten Bereich von {0} bis {1}.
 
 javax.faces.validator.DoubleRangeValidator.LIMIT        = Validierungsfehler
 javax.faces.validator.DoubleRangeValidator.LIMIT_detail = Eingegebener Wert kann nicht in den korrekten Typ umgewandelt werden.
 
 javax.faces.validator.DoubleRangeValidator.MAXIMUM        = Validierungsfehler
-javax.faces.validator.DoubleRangeValidator.MAXIMUM_detail = Wert ist größer als das erlaubte Maximum ''{0}''.
+javax.faces.validator.DoubleRangeValidator.MAXIMUM_detail = "{1}": Wert ist größer als das erlaubte Maximum ''{0}''.
 
 javax.faces.validator.DoubleRangeValidator.MINIMUM        = Validierungsfehler
-javax.faces.validator.DoubleRangeValidator.MINIMUM_detail = Wert ist kleiner als das erlaubte Minimum ''{0}''.
+javax.faces.validator.DoubleRangeValidator.MINIMUM_detail = "{1}": Wert ist kleiner als das erlaubte Minimum ''{0}''.
 
 javax.faces.validator.DoubleRangeValidator.TYPE        = Validierungsfehler
-javax.faces.validator.DoubleRangeValidator.TYPE_detail = Eingegebener Wert hat falschen Datentyp.
+javax.faces.validator.DoubleRangeValidator.TYPE_detail = "{0}": Eingegebener Wert hat falschen Datentyp.
 
 javax.faces.validator.LengthValidator.LIMIT        = Validierungsfehler
 javax.faces.validator.LengthValidator.LIMIT_detail = Eingegebener Wert kann nicht in den korrekten Typ umgewandelt werden.
 
 javax.faces.validator.LengthValidator.MAXIMUM        = Validierungsfehler
-javax.faces.validator.LengthValidator.MAXIMUM_detail = Eingegebener Wert ist länger als die maximal zulässige Anzahl von {0} Zeichen.
+javax.faces.validator.LengthValidator.MAXIMUM_detail = "{1}": Eingegebener Wert ist länger als die maximal zulässige Anzahl von {0} Zeichen.
 
 javax.faces.validator.LengthValidator.MINIMUM        = Validierungsfehler
-javax.faces.validator.LengthValidator.MINIMUM_detail = Eingegebener Wert ist kürzer als die minimal zulässige Anzahl von {0} Zeichen.
+javax.faces.validator.LengthValidator.MINIMUM_detail = "{1}": Eingegebener Wert ist kürzer als die minimal zulässige Anzahl von {0} Zeichen.
 
 javax.faces.validator.LongRangeValidator.LIMIT        = Validierungsfehler
 javax.faces.validator.LongRangeValidator.LIMIT_detail = Eingegebener Wert kann nicht in den korrekten Typ umgewandelt werden.
 
 javax.faces.validator.LongRangeValidator.MAXIMUM        = Validierungsfehler
-javax.faces.validator.LongRangeValidator.MAXIMUM_detail = Wert ist größer als das erlaubte Maximum ''{0}''.
+javax.faces.validator.LongRangeValidator.MAXIMUM_detail = "{1}": Wert ist größer als das erlaubte Maximum ''{0}''.
 
 javax.faces.validator.LongRangeValidator.MINIMUM        = Validierungsfehler
-javax.faces.validator.LongRangeValidator.MINIMUM_detail = Wert ist kleiner als das erlaubte Minimum ''{0}''.
+javax.faces.validator.LongRangeValidator.MINIMUM_detail = "{1}": Wert ist kleiner als das erlaubte Minimum ''{0}''.
 
 javax.faces.validator.LongRangeValidator.TYPE        = Validierungsfehler
-javax.faces.validator.LongRangeValidator.TYPE_detail = Eingegebener Wert hat falschen Datentyp.
+javax.faces.validator.LongRangeValidator.TYPE_detail = "{0}": Eingegebener Wert hat falschen Datentyp.
 
 
 # additional messages (not specified, but supported by myfaces API converters)
 
 javax.faces.convert.BigDecimalConverter.CONVERSION        = Konvertierungsfehler
-javax.faces.convert.BigDecimalConverter.CONVERSION_detail = Der eingegebene Wert ist keine gültige Zahl.
+javax.faces.convert.BigDecimalConverter.CONVERSION_detail = "{0}": Der eingegebene Wert ist keine gültige Zahl.
 
 javax.faces.convert.BigIntegerConverter.CONVERSION        = Konvertierungsfehler
-javax.faces.convert.BigIntegerConverter.CONVERSION_detail = Der eingegebene Wert ist keine gültige Zahl.
+javax.faces.convert.BigIntegerConverter.CONVERSION_detail = "{0}": Der eingegebene Wert ist keine gültige Zahl.
 
 javax.faces.convert.BooleanConverter.CONVERSION        = Konvertierungsfehler
-javax.faces.convert.BooleanConverter.CONVERSION_detail = {0} konnte nicht in einen boolschen Wert umgewandelt werden.
+javax.faces.convert.BooleanConverter.CONVERSION_detail = "{1}": {0} konnte nicht in einen boolschen Wert umgewandelt werden.
 
 javax.faces.convert.ByteConverter.CONVERSION        = Konvertierungsfehler
-javax.faces.convert.ByteConverter.CONVERSION_detail = {0} konnte nicht in einen Byte-Wert umgewandelt werden.
+javax.faces.convert.ByteConverter.CONVERSION_detail = "{1}": {0} konnte nicht in einen Byte-Wert umgewandelt werden.
 
 javax.faces.convert.CharacterConverter.CONVERSION        = Konvertierungsfehler
 javax.faces.convert.CharacterConverter.CONVERSION_detail = {0} konnte nicht in ein Zeichen umgewandelt werden.
 
 javax.faces.convert.DateTimeConverter.CONVERSION        = Konvertierungsfehler
-javax.faces.convert.DateTimeConverter.CONVERSION_detail = {0} ist keine gültige Datum/Zeit-Angabe.
+javax.faces.convert.DateTimeConverter.CONVERSION_detail = "{1}": {0} ist keine gültige Datum/Zeit-Angabe.
 
 javax.faces.convert.DoubleConverter.CONVERSION        = Konvertierungsfehler
-javax.faces.convert.DoubleConverter.CONVERSION_detail = Der eingegebene Wert ist keine gültige Zahl.
+javax.faces.convert.DoubleConverter.CONVERSION_detail = "{0}": Der eingegebene Wert ist keine gültige Zahl.
 
 javax.faces.convert.FloatConverter.CONVERSION        = Konvertierungsfehler
-javax.faces.convert.FloatConverter.CONVERSION_detail = Der eingegebene Wert ist keine gültige Zahl.
+javax.faces.convert.FloatConverter.CONVERSION_detail = "{0}": Der eingegebene Wert ist keine gültige Zahl.
 
 javax.faces.convert.IntegerConverter.CONVERSION        = Konvertierungsfehler
-javax.faces.convert.IntegerConverter.CONVERSION_detail = Der eingegebene Wert ist keine gültige Zahl.
+javax.faces.convert.IntegerConverter.CONVERSION_detail = "{0}": Der eingegebene Wert ist keine gültige Zahl.
 
 javax.faces.convert.LongConverter.CONVERSION        = Konvertierungsfehler
-javax.faces.convert.LongConverter.CONVERSION_detail = Der eingegebene Wert ist keine gültige Zahl.
+javax.faces.convert.LongConverter.CONVERSION_detail = "{0}": Der eingegebene Wert ist keine gültige Zahl.
 
 javax.faces.convert.NumberConverter.CONVERSION        = Konvertierungsfehler
-javax.faces.convert.NumberConverter.CONVERSION_detail = Der eingegebene Wert ist keine gültige Zahl.
+javax.faces.convert.NumberConverter.CONVERSION_detail = "{0}": Der eingegebene Wert ist keine gültige Zahl.
 
 javax.faces.convert.ShortConverter.CONVERSION        = Konvertierungsfehler
-javax.faces.convert.ShortConverter.CONVERSION_detail = Der eingegebene Wert ist keine gültige Zahl.
+javax.faces.convert.ShortConverter.CONVERSION_detail = "{0}": Der eingegebene Wert ist keine gültige Zahl.
 
 
 # myfaces specific messages
