--- a/src/myfaces/javax/faces/Messages_fr.properties
+++ b/src/myfaces/javax/faces/Messages_fr.properties
@@ -21,10 +21,10 @@
 # standard messages (Spec. 2.5.1.4)
 
 javax.faces.component.UIInput.CONVERSION        = Erreur de conversion
-javax.faces.component.UIInput.CONVERSION_detail = Erreur durant la mise à jour des données.
+javax.faces.component.UIInput.CONVERSION_detail = "{0}": Erreur durant la mise à jour des données.
 
 javax.faces.component.UIInput.REQUIRED        = Erreur de validation
-javax.faces.component.UIInput.REQUIRED_detail = Une donnée est requise.
+javax.faces.component.UIInput.REQUIRED_detail = "{0}": Une donnée est requise.
 
 javax.faces.component.UISelectOne.INVALID        = Erreur de Validation
 javax.faces.component.UISelectOne.INVALID_detail = La donnée n''est pas une option valide.
@@ -33,40 +33,40 @@ javax.faces.component.UISelectMany.INVALID        = Erreur de Validation
 javax.faces.component.UISelectMany.INVALID_detail = La donnée n''est pas une option valide.
 
 javax.faces.validator.NOT_IN_RANGE        = Erreur de Validation
-javax.faces.validator.NOT_IN_RANGE_detail = La donnée n''est pas comprise entre {0} et {1}.
+javax.faces.validator.NOT_IN_RANGE_detail = "{2}": La donnée n''est pas comprise entre {0} et {1}.
 
 javax.faces.validator.DoubleRangeValidator.LIMIT        = Erreur de Validation
 javax.faces.validator.DoubleRangeValidator.LIMIT_detail = La donnée ne peut être convertie dans le bon type.
 
 javax.faces.validator.DoubleRangeValidator.MAXIMUM        = Erreur de Validation
-javax.faces.validator.DoubleRangeValidator.MAXIMUM_detail = La donnée est supérieur au maximum authorisé de ''{0}''.
+javax.faces.validator.DoubleRangeValidator.MAXIMUM_detail = "{1}": La donnée est supérieur au maximum authorisé de ''{0}''.
 
 javax.faces.validator.DoubleRangeValidator.MINIMUM        = Erreur de Validation
-javax.faces.validator.DoubleRangeValidator.MINIMUM_detail = La donnée est inférieur au maximum authorisé de ''{0}''.
+javax.faces.validator.DoubleRangeValidator.MINIMUM_detail = "{1}": La donnée est inférieur au maximum authorisé de ''{0}''.
 
 javax.faces.validator.DoubleRangeValidator.TYPE        = Erreur de Validation
-javax.faces.validator.DoubleRangeValidator.TYPE_detail = La donnée n''est pas du bon type.
+javax.faces.validator.DoubleRangeValidator.TYPE_detail = "{0}": La donnée n''est pas du bon type.
 
 javax.faces.validator.LengthValidator.LIMIT        = Erreur de Validation
 javax.faces.validator.LengthValidator.LIMIT_detail = La donnée ne peut être convertie dans le bon type.
 
 javax.faces.validator.LengthValidator.MAXIMUM        = Erreur de Validation
-javax.faces.validator.LengthValidator.MAXIMUM_detail = La donnée a plus que les {0} caractères maximum authorisés.
+javax.faces.validator.LengthValidator.MAXIMUM_detail = "{1}": La donnée a plus que les {0} caractères maximum authorisés.
 
 javax.faces.validator.LengthValidator.MINIMUM        = Erreur de Validation
-javax.faces.validator.LengthValidator.MINIMUM_detail = La donnée a moins que les {0} caractères maximum requis.
+javax.faces.validator.LengthValidator.MINIMUM_detail = "{1}": La donnée a moins que les {0} caractères maximum requis.
 
 javax.faces.validator.LongRangeValidator.LIMIT        = Erreur de Validation
 javax.faces.validator.LongRangeValidator.LIMIT_detail = La donnée ne peut être convertie dans le bon type.
 
 javax.faces.validator.LongRangeValidator.MAXIMUM        = Erreur de Validation
-javax.faces.validator.LongRangeValidator.MAXIMUM_detail = La donnée est supérieur au maximum authorisé de ''{0}''.
+javax.faces.validator.LongRangeValidator.MAXIMUM_detail = "{1}": La donnée est supérieur au maximum authorisé de ''{0}''.
 
 javax.faces.validator.LongRangeValidator.MINIMUM        = Erreur de Validation
-javax.faces.validator.LongRangeValidator.MINIMUM_detail = La donnée est inférieur au maximum authorisé de ''{0}''.
+javax.faces.validator.LongRangeValidator.MINIMUM_detail = "{1}": La donnée est inférieur au maximum authorisé de ''{0}''.
 
 javax.faces.validator.LongRangeValidator.TYPE        = Erreur de Validation
-javax.faces.validator.LongRangeValidator.TYPE_detail = La donnée n''est pas du bon type.
+javax.faces.validator.LongRangeValidator.TYPE_detail = "{0}": La donnée n''est pas du bon type.
 
 
 # additional messages (not specified, but supported by myfaces API converters)
@@ -87,25 +87,25 @@ javax.faces.convert.CharacterConverter.CONVERSION        = Erreur de conversion
 javax.faces.convert.CharacterConverter.CONVERSION_detail = Conversion de '{0}' en Caractère impossible.
 
 javax.faces.convert.DateTimeConverter.CONVERSION        = Erreur de conversion
-javax.faces.convert.DateTimeConverter.CONVERSION_detail = Conversion de '{0}' en Date/Heure impossible.
+javax.faces.convert.DateTimeConverter.CONVERSION_detail = "{1}": Conversion de '{0}' en Date/Heure impossible.
 
 javax.faces.convert.DoubleConverter.CONVERSION        = Conversion Error
-javax.faces.convert.DoubleConverter.CONVERSION_detail = La donnée n''est pas un nombre valide.
+javax.faces.convert.DoubleConverter.CONVERSION_detail = "{0}": La donnée n''est pas un nombre valide.
 
 javax.faces.convert.FloatConverter.CONVERSION        = Conversion Error
-javax.faces.convert.FloatConverter.CONVERSION_detail = La donnée n''est pas un nombre valide.
+javax.faces.convert.FloatConverter.CONVERSION_detail = "{0}": La donnée n''est pas un nombre valide.
 
 javax.faces.convert.IntegerConverter.CONVERSION        = Conversion Error
-javax.faces.convert.IntegerConverter.CONVERSION_detail = La donnée n''est pas un nombre valide.
+javax.faces.convert.IntegerConverter.CONVERSION_detail = "{0}": La donnée n''est pas un nombre valide.
 
 javax.faces.convert.LongConverter.CONVERSION        = Conversion Error
-javax.faces.convert.LongConverter.CONVERSION_detail = La donnée n''est pas un nombre valide.
+javax.faces.convert.LongConverter.CONVERSION_detail = "{0}": La donnée n''est pas un nombre valide.
 
 javax.faces.convert.NumberConverter.CONVERSION        = Conversion Error
-javax.faces.convert.NumberConverter.CONVERSION_detail = La donnée n''est pas un nombre valide.
+javax.faces.convert.NumberConverter.CONVERSION_detail = "{0}": La donnée n''est pas un nombre valide.
 
 javax.faces.convert.ShortConverter.CONVERSION        = Conversion Error
-javax.faces.convert.ShortConverter.CONVERSION_detail = La donnée n''est pas un nombre valide.
+javax.faces.convert.ShortConverter.CONVERSION_detail = "{0}": La donnée n''est pas un nombre valide.
 
 
 # myfaces specific messages
