--- a/webapps/examples/src/net/sourceforge/myfaces/examples/resource/example_messages_fr.properties
+++ b/webapps/examples/src/net/sourceforge/myfaces/examples/resource/example_messages_fr.properties
@@ -1,29 +1,29 @@
-welcome = Bienvenue ï¿½
+welcome = Bienvenue à
 today = Aujourd''hui, le {0,date,short}.
 
 
-nav_Home            = Home page
+nav_Home            = Pade d''acceuil
 nav_Examples        = Exemples
 nav_Sample_1        = Exemple 1
 nav_Sample_2        = Exemple 2
-nav_dataTable       = Maï¿½tre/Dï¿½tail
-nav_sortTable       = Table Triable
+nav_dataTable       = Maître/Détail
+nav_sortTable       = Table triable
 nav_Documentation   = Documentation
-nav_Features        = Caractï¿½ristiques
+nav_Features        = Caractéristiques
 nav_Info            = Info
 nav_Contact         = Contact
 nav_Copyright       = Copyright
 nav_Options         = Options
 nav_Components      = Composants
-nav_Selectbox       = Boites de sï¿½lection
+nav_Selectbox       = Boîtes de sélection
 nav_FileUpload      = Upload de fichier
-nav_TabbedPane      = Panneau ï¿½ onglets
+nav_TabbedPane      = Panneau à onglets
 nav_Calendar        = Calendrier
 nav_dataList        = Listes dynamiques
 nav_tree            = Arbre
 nav_Validate		= Validations
-nav_rssTicker		= Ticker Rss
-nav_dataScroller    = DataScroller
+nav_rdfTicker		= Ticker Rdf
+nva_dataScroller    = DataScroller
 
 # buttons
 
@@ -32,40 +32,40 @@ button_apply = Appliquer
 button_cancel = Annuler
 button_delete = Effacer
 
-alt_logo = MyFaces - l''implï¿½mentation JSF open source
+alt_logo = MyFaces - l''implémentation JSF open source
 
 option_lang = Voir cette page en
-option_layout = Layout
+option_layout = Disposition
 
 empty_selitem = Choisissez ...
 
 
 # components examples
 
-label_cars = Modï¿½le
+label_cars = Modèle
 label_colors = Couleurs
 label_color = Couleur
 label_extras = Extras
 button_calcprice = Calculer le prix
-msg_price = {0,choice,0#Configurer votre rï¿½ve le plus fou!|1< Votre prix: \u20AC\u00A0{0}}
+msg_price = {0,choice,0#Configurer votre rêve le plus fou!|1< Votre prix: \u20AC\u00A0{0}}
 color_black = noir
 color_blue = bleu
 color_marine = bleu marine
 color_red = rouge
-extra_aircond = Air-conditionnï¿½e
-extra_sideab = Airbags de cï¿½tï¿½
-extra_mirrowheat = Rï¿½troviseurs chauffï¿½s
-extra_leaderseat = Siï¿½ges en cuir
+extra_aircond = Air conditionné
+extra_sideab = Airbags de côté
+extra_mirrowheat = Rétroviseurs chauffés
+extra_leaderseat = Siéges en cuir
 discount_0 = Je ne veux pas de remise
-discount_1 = Je veux une remise cumulï¿½e
+discount_1 = Je veux une remise cumulée
 discount_2 = Je veux une remise entreprise
 discount_2_0 = Les BeachBoys sont super
 discount_2_1 = Les Red Hot Chillis sont mieux
 discount_2_2 = Mon groupe favori
-radio_hint = This Radio is a myfaces extension - you can use html code here!
+radio_hint = Ce radio est une extension de myfaces, vous pouvez y intégrer de l''HTML dedans !
 sort_cartype = Type de voiture
 sort_carcolor = Couleur
-sales_tax = Taxe de vente
+sales_tax = Taxe
 
 label_country_name = Pays
 label_country_iso = Code Iso
@@ -73,7 +73,7 @@ new_country = Ajouter un pays ?
 country_edit_table = Editer tous les pays ?
 
 dataList_simple = Liste simple
-dataList_ul = Liste non ordonnï¿½e
-dataList_ol = Liste ordonnï¿½e
+dataList_ul = Liste non ordonnée
+dataList_ol = Liste ordonnée
 
 dataScroller_pages = Page {0} / {1}
