--- a/doc/release-notes.txt
+++ b/doc/release-notes.txt
@@ -25,12 +25,14 @@ Changes in Release 1.0.8 beta
 * add a validator for ISBN codes (<x:validateISBN/>)
 * new tree table feature contributed by David Le Strat (MYFACES-8)
 * new ExtensionsFilter, replacing the MultipartFilter, and allowing embedded resources in the jar
+* new x:popup component
 * popup component now uses embeded resources
 * calendar component now uses embeded resources
 * new HTML Editor component (<x:htmlEditor>). Basically, it's an rich text WYSIWYG component.
 * add a popup calendar to the inputDate tag.
 * Some tiles support enhancements
 * localization for spanish from Spain (es_es) or catalan (ca / es_ca)
+* new JavaScript support tags and components - x:jsValueSet, x:jsValueChangeListener
 ----------------------------------------------------------------------
 Changes in Release 1.0.7 beta
 * new custom component: HtmlPanelStack
