--- a/doc/release-notes.txt
+++ b/doc/release-notes.txt
@@ -25,6 +25,8 @@ Changes in Release 1.0.8 beta
 * add a validator for ISBN codes (<x:validateISBN/>)
 * new tree table feature contributed by David Le Strat (MYFACES-8)
 * new ExtensionsFilter, replacing the MultipartFilter, and allowing embedded resources in the jar
+* upgrade the components use the ExtensionsFilter
+  this means you don't need to include the myfaces javascripts and style sheets in your app anymore.
 * new x:popup component
 * popup component now uses embeded resources
 * calendar component now uses embeded resources
