--- a/doc/release-notes.txt
+++ b/doc/release-notes.txt
@@ -1,6 +1,7 @@
 MyFaces Release Notes
 =====================
 
+* new x:buffer component
 ----------------------------------------------------------------------
 Changes in Release 1.0.8 beta_RC2
 * added a new RenderKit, that renders WML. Thanks to Jiri Zaloudek for his contribution
