--- a/doc/release-notes.txt
+++ b/doc/release-notes.txt
@@ -6,6 +6,8 @@ Changes in Release 1.0.9
 * added support for portlet api (MYFACES-86). Thanks to Stan Silver (JBoss Group)
 * new CollapsiblePanel Component
 * added forceId to <x:inputText for better reuse of legacy JavaScript
+*closed MYFACES-91 in Jira 
+* closed MYFACES-79 in Jira 
 * closed MYFACES-90 in Jira (i18n support)
 * closed MYFACES-86 in Jira (portlet)
 * closed MYFACES-83 in Jira (Refactored HtmlTableRendererBase)
