--- a/doc/release-notes.txt
+++ b/doc/release-notes.txt
@@ -6,6 +6,7 @@ Changes in Release 1.0.9
 * added support for portlet api (MYFACES-86). Thanks to Stan Silver (JBoss Group)
 * new CollapsiblePanel Component
 * added forceId to <x:inputText for better reuse of legacy JavaScript
+* added russian i18n.
 * closed MYFACES-96 in Jira (Jason Hoo)
 * closed MYFACES-91 in Jira 
 * closed MYFACES-79 in Jira 
