thanks to sean schofield for removing *legacy* attributes of MyFaces
git-svn-id: https://svn.apache.org/repos/asf/myfaces/trunk@167559 13f79535-47bb-0310-9956-ffa450edef68

--- a/doc/release-notes.txt
+++ b/doc/release-notes.txt
@@ -7,6 +7,7 @@ Changes in Release 1.0.9
 * new CollapsiblePanel Component
 * added forceId to <x:inputText for better reuse of legacy JavaScript
 * added russian i18n.
+* closed MYFACES-85 in Jira
 * closed MYFACES-96 in Jira (Jason Hoo)
 * closed MYFACES-91 in Jira 
 * closed MYFACES-79 in Jira 
