--- a/doc/release-notes.txt
+++ b/doc/release-notes.txt
@@ -19,6 +19,7 @@ Changes in Release 1.0.9
 * closed MYFACES-81 in Jira (StateManager.SerializedView should not implement Serializable)
 * closed MFACES-76 in Jira
 * closed MFACES-74 in Jira
+* closed MFACES-104 in Jira
 ----------------------------------------------------------------------
 Changes in Release 1.0.8 beta_RC2
 * added a new RenderKit, that renders WML. Thanks to Jiri Zaloudek for his contribution
