--- a/doc/release-notes.txt
+++ b/doc/release-notes.txt
@@ -8,6 +8,7 @@ Changes in Release 1.0.9
 * new selectOneCountry component
 * added forceId to <x:inputText for better reuse of legacy JavaScript
 * added russian i18n.
+* added HOWTO Portlet-API (MYFACES/docs/portlet_quick_start.txt)
 * closed MYFACES-85 in Jira
 * closed MYFACES-96 in Jira (Jason Hoo)
 * closed MYFACES-91 in Jira 
@@ -20,6 +21,8 @@ Changes in Release 1.0.9
 * closed MFACES-76 in Jira
 * closed MFACES-74 in Jira
 * closed MFACES-104 in Jira
+* closed MYFACES-101 in Jira
+* closed MYFACES-106 in Jira
 ----------------------------------------------------------------------
 Changes in Release 1.0.8 beta_RC2
 * added a new RenderKit, that renders WML. Thanks to Jiri Zaloudek for his contribution
