--- a/doc/release-notes.txt
+++ b/doc/release-notes.txt
@@ -9,6 +9,7 @@ Changes in Release 1.0.9
 * added forceId to <x:inputText for better reuse of legacy JavaScript
 * added russian i18n.
 * added HOWTO Portlet-API (MYFACES/docs/portlet_quick_start.txt)
+* imporvments for tree2 component from Sean Schofield
 * closed MYFACES-85 in Jira
 * closed MYFACES-96 in Jira (Jason Hoo)
 * closed MYFACES-91 in Jira 
@@ -31,6 +32,9 @@ Changes in Release 1.0.9
 * closed MYFACES-109 in Jira
 * closed MYFACES-112 in Jira
 * closed MYFACES-125 in Jira
+* closed MYFACES-121 in Jira
+* closed MYFACES-122 in Jira
+* closed MYFACES-126 in Jira
 ----------------------------------------------------------------------
 Changes in Release 1.0.8 beta_RC2
 * added a new RenderKit, that renders WML. Thanks to Jiri Zaloudek for his contribution
