--- a/doc/release-notes.txt
+++ b/doc/release-notes.txt
@@ -9,7 +9,7 @@ Changes in Release 1.0.9
 * added forceId to <x:inputText for better reuse of legacy JavaScript
 * added russian i18n.
 * added HOWTO Portlet-API (MYFACES/docs/portlet_quick_start.txt)
-* imporvments for tree2 component from Sean Schofield
+* improvements for tree2 component from Sean Schofield
 * closed MYFACES-85 in Jira
 * closed MYFACES-96 in Jira (Jason Hoo)
 * closed MYFACES-91 in Jira 
