Close MYFACES-128, thanks to Mathias Broekelmann.
git-svn-id: https://svn.apache.org/repos/asf/myfaces/trunk@167666 13f79535-47bb-0310-9956-ffa450edef68

--- a/doc/release-notes.txt
+++ b/doc/release-notes.txt
@@ -36,6 +36,7 @@ Changes in Release 1.0.9
 * closed MYFACES-121 in Jira
 * closed MYFACES-122 in Jira
 * closed MYFACES-126 in Jira
+* closed MYFACES-128 in Jira
 * closed MYFACES-132 in Jira
 ----------------------------------------------------------------------
 Changes in Release 1.0.8 beta_RC2
