--- a/webapps/src/org/apache/myfaces/examples/resource/example_messages_ja.properties
+++ b/webapps/src/org/apache/myfaces/examples/resource/example_messages_ja.properties
@@ -7,6 +7,7 @@ nav_Examples        = \u30b5\u30f3\u30d7\u30eb
 nav_Sample_1        = \u30b5\u30f3\u30d7\u30eb 1
 nav_Sample_2        = \u30b5\u30f3\u30d7\u30eb 2
 nav_aliasBean       = \u30a8\u30a4\u30ea\u30a2\u30b9\u30d3\u30fc\u30f3
+nav_buffer          = \u30d0\u30c3\u30d5\u30a1
 nav_dataTable       = \u30c7\u30fc\u30bf\u30c6\u30fc\u30d6\u30eb
 nav_sortTable       = \u30bd\u30fc\u30c8\u6e08\u307f\u30c6\u30fc\u30d6\u30eb
 nav_Documentation   = \u30c9\u30ad\u30e5\u30e1\u30f3\u30c8
@@ -21,19 +22,22 @@ nav_FileUpload      = \u30d5\u30a1\u30a4\u30eb\u30a2\u30c3\u30d7\u30ed\u30fc\u30
 nav_TabbedPane      = \u30bf\u30d6\u30d1\u30cd\u30eb
 nav_Calendar        = \u30ab\u30ec\u30f3\u30c0\u30fc
 nav_Popup           = \u30dd\u30c3\u30d7\u30a2\u30c3\u30d7
+nav_JsListener      = JavaScript\u30ea\u30b9\u30ca\u30fc
 nav_dataList        = \u30c0\u30a4\u30ca\u30df\u30c3\u30af\u30ea\u30b9\u30c8
 nav_tree            =\u30c4\u30ea\u30fc
-nav_treeTable       = Tree Table
+nav_tree2           = \u30c4\u30ea\u30fc2
+nav_treeTable       = \u30c4\u30ea\u30fc\u30c6\u30fc\u30d6\u30eb
 nav_Validate		= \u30d0\u30ea\u30c7\u30fc\u30b7\u30e7\u30f3
 nav_rssTicker		= RSS\u30c6\u30a3\u30c3\u30ab\u30fc
 nav_dataScroller    = \u30c7\u30fc\u30bf\u30b9\u30af\u30ed\u30fc\u30e9
 nav_Date			= \u65e5\u4ed8
 nav_panelstack      = \u30d1\u30cd\u30eb\u30b9\u30bf\u30c3\u30af
 nav_css             = \u30b9\u30bf\u30a4\u30eb\u30b7\u30fc\u30c8
-nav_newspaperTable  = Newspaper Table
-nav_forceId         = ForceId
-nav_swapimage       = SwapImage
-
+nav_newspaperTable  = \u30cb\u30e5\u30fc\u30b9\u30da\u30fc\u30d1\u30fc\u30c6\u30fc\u30d6\u30eb
+nav_HtmlEditor		= HTML\u30a8\u30c7\u30a3\u30bf
+nav_forceId         = \u5f37\u5236ID
+nav_swapimage       = \u30b9\u30ef\u30c3\u30d7\u30a4\u30e1\u30fc\u30b8
+nav_selectOneCountry= \u56fd\u30b3\u30fc\u30c9\u9078\u629e
 
 # buttons
 
@@ -119,7 +123,7 @@ dataList_simple = \u30b7\u30f3\u30d7\u30eb\u30ea\u30b9\u30c8
 dataList_ul = \u756a\u53f7\u306a\u3057\u30ea\u30b9\u30c8
 dataList_ol = \u756a\u53f7\u4ed8\u304d\u30ea\u30b9\u30c8
 
-dataScroller_pages = TRANSLATE {0} Cars found, displaying {1} cars, from {2} to {3}. Page {4} / {5}
+dataScroller_pages = TRANSLATE {0} \u53f0\u306e\u8eca\u304c\u898b\u3064\u304b\u308a\u307e\u3057\u305f, \u30da\u30fc\u30b8 {4} / {5}\u3001{2}\u53f0\u76ee\u304b\u3089{3}\u53f0\u4ee3\u76ee\u307e\u3067\u306e {1} \u53f0\u306e\u8eca\u3092\u8868\u793a\u3057\u3066\u3044\u307e\u3059\u3002 
 date_comp_header = \u65e5\u4ed8\u5165\u529b\u30bf\u30b0
 date_comp_text1 = \u65e5\u4ed8\u3092\u5165\u529b\u3057\u3066\u304f\u3060\u3055\u3044
 date_comp_text2 = \u65e5\u4ed8:
@@ -161,5 +165,5 @@ js_submit=\u9001\u4fe1
 css_msg=\u6b21\u306e\u30b3\u30f3\u30dd\u30fc\u30cd\u30f3\u30c8\u306e\u7c21\u5358\u306a\u30c6\u30b9\u30c8\u3067\u3059:
 
 
-forceOne=Value 1 @TRANSLATE
-forceTwo=Value 2 (with forceId) @TRANSLATE
+forceOne=\u5024 1
+forceTwo=\u5024 2 (\u5f37\u5236ID)
