--- a/doc/release-notes.txt
+++ b/doc/release-notes.txt
@@ -36,12 +36,14 @@ Changes in Release 1.0.9
 * closed MYFACES-109 in Jira
 * closed MYFACES-111 in Jira
 * closed MYFACES-112 in Jira
+* closed MYFACES-116 in Jira
 * closed MYFACES-125 in Jira
 * closed MYFACES-121 in Jira
 * closed MYFACES-122 in Jira
 * closed MYFACES-126 in Jira
 * closed MYFACES-128 in Jira
 * closed MYFACES-132 in Jira
+* closed MYFACES-138 in Jira
 
 * add a fallback textarea mode to the htmlEditor
 ----------------------------------------------------------------------
