--- a/webapps/src/example/org/apache/myfaces/examples/resource/example_messages_ja.properties
+++ b/webapps/src/example/org/apache/myfaces/examples/resource/example_messages_ja.properties
@@ -1,5 +1,5 @@
 welcome = \u3088\u3046\u3053\u305d
-today = \u4eca\u65e5\u306e\u65e5\u4ed8: {0,date,short}.
+today = \u4eca\u65e5\u306e\u65e5\u4ed8: {0,date,long}
 
 
 nav_Home            = \u30db\u30fc\u30e0
@@ -9,9 +9,9 @@ nav_Sample_2        = \u30b5\u30f3\u30d7\u30eb 2
 nav_aliasBean       = \u30a8\u30a4\u30ea\u30a2\u30b9\u30d3\u30fc\u30f3
 nav_buffer          = \u30d0\u30c3\u30d5\u30a1
 nav_dataTable       = \u30c7\u30fc\u30bf\u30c6\u30fc\u30d6\u30eb
-nav_sortTable       = \u30bd\u30fc\u30c8\u6e08\u307f\u30c6\u30fc\u30d6\u30eb
+nav_sortTable       = \u30bd\u30fc\u30c8\u30c6\u30fc\u30d6\u30eb
 nav_Documentation   = \u30c9\u30ad\u30e5\u30e1\u30f3\u30c8
-nav_Features        = \u7279\u5fb4
+nav_Features        = \u6a5f\u80fd
 nav_Info            = \u60c5\u5831
 nav_Contact         = \u30b3\u30f3\u30bf\u30af\u30c8
 nav_Copyright       = \u8457\u4f5c\u6a29
@@ -38,6 +38,7 @@ nav_InputHtml		= HTML\u30a8\u30c7\u30a3\u30bf
 nav_forceId         = \u5f37\u5236ID
 nav_swapimage       = \u30b9\u30ef\u30c3\u30d7\u30a4\u30e1\u30fc\u30b8
 nav_selectOneCountry= \u56fd\u30b3\u30fc\u30c9\u9078\u629e
+nav_crossDataTable  = \u30af\u30ed\u30b9\u30c6\u30fc\u30d6\u30eb
 
 # buttons
 
@@ -68,15 +69,15 @@ sample1_result = \u7d50\u679c
 sample1_text = \u30c6\u30ad\u30b9\u30c8
 sample1_uppercase = \u5927\u6587\u5b57\u3078\u5909\u63db
 sample1_lowercase = \u5c0f\u6587\u5b57\u3078\u5909\u63db
-sample1_disable_validation = \u30d0\u30ea\u30c7\u30fc\u30b7\u30e7\u30f3\u3092\u6709\u52b9\u306b\u3059\u308b
-sample1_enable_validation = \u30d0\u30ea\u30c7\u30fc\u30b7\u30e7\u30f3\u3092\u7121\u52b9\u306b\u3059\u308b
+sample1_disable_validation = \u30d0\u30ea\u30c7\u30fc\u30b7\u30e7\u30f3\u3092\u7121\u52b9\u306b\u3059\u308b
+sample1_enable_validation = \u30d0\u30ea\u30c7\u30fc\u30b7\u30e7\u30f3\u3092\u6709\u52b9\u306b\u3059\u308b
 
 # sample2
 
-sample2_add_quote = \u5f15\u7528\u7b26\u8ffd\u52a0
-sample2_remove_quote = \u5f15\u7528\u7b26\u524a\u9664
-sample2_select_quote = \u5f15\u7528\u7b26\u306e\u9078\u629e
-sample2_select_unquote = \u524a\u9664\u3059\u308b\u5f15\u7528\u7b26\u3092\u9078\u629e
+sample2_add_quote = \u5f15\u7528\u8a18\u53f7\u8ffd\u52a0
+sample2_remove_quote = \u5f15\u7528\u8a18\u53f7\u524a\u9664
+sample2_select_quote = \u5f15\u7528\u8a18\u53f7\u306e\u9078\u629e
+sample2_select_unquote = \u524a\u9664\u3059\u308b\u5f15\u7528\u8a18\u53f7\u3092\u9078\u629e
 
 # components examples
 
